# bizhi

./: README.md  com.github.doomsdayrs.bizhi.json  meson.build
data/: com.github.doomsdayrs.bizhi.appdata.xml.in  com.github.doomsdayrs.bizhi.desktop.in  com.github.doomsdayrs.bizhi.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: bizhi-window.cpp  bizhi-window.h  bizhi.gresource.xml  main.cpp  meson.build
